Updating the talks, modifying the links

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
         <h4>August, 2022</h4>
-        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796">Math Comp</a>
+        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796" target="_blank">Math Comp</a>
         <h4>June, 2022</h4>
-        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127">IJNMF</a>
+        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
       </div>
       <div id="content">
         <!-- insert the page content here -->
         <IMG align=center src="TH.jpg" width="200"><br/> 
         <h1>Welcome to my homepage!</h1>
-        <p>I am currently an Assistant Professor at the Department of Mathematics and Statistics at Oakland University. Previously I was working with <a href="https://uwaterloo.ca/scholar/srheberg">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.cs.elte.hu/">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.</p>
+        <p>I am currently an Assistant Professor at the Department of Mathematics and Statistics at Oakland University. Previously I was working with <a href="https://uwaterloo.ca/scholar/srheberg" target="_blank">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/" target="_blank">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.math.elte.hu/" target="_blank">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.</p>
         
         <p>Office: Oakland University<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Department of Mathematics and Statistics<br>
