--- a/publications.html
+++ b/publications.html
@@ -37,69 +37,65 @@
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
         <h4>August, 2022</h4>
-        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796">Math Comp</a>
+        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796" target="_blank">Math Comp</a>
         <h4>June, 2022</h4>
-        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127">IJNMF</a>
+        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
       </div>
       <div id="content">
 
-<!--<span style="font-weight: bold;">Submitted papers:</span><br>
-<br>
-[8] KK.L.A. Kirk, T.L. Horvath, A. Cesmelioglu and S. Rhebergen, Analysis of a space-time hybridizable discontinuous Galerkin method for the advection-diffusion problem on time-dependent domains, SIAM J. Numer. Anal., Accepted, 2019. [<a href="http://arxiv.org/abs/1812.00216">preprint</a>]
-<br>-->
 
 
 <br>
 <span style="font-weight: bold; font-size:20px;">Journal papers</span>
 <br>
 <br>
-[10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, accepted for publication to Mathematics of Computation (2022) [<a href="https://doi.org/10.1090/mcom/3796">article</a>] [<a href="https://arxiv.org/abs/2103.13492">preprint</a>]<br>
+[10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, Mathematics of Computation, 92/340 (2023), pp 525–556 [<a href="https://doi.org/10.1090/mcom/3796" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2103.13492" target="_blank" >preprint</a>]<br>
 <br>
-[9] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2022), Int. J. Numer. Meth. Fluids, 94/11 (2022), pp. 1784-1809 [<a href="https://doi.org/10.1002/fld.5127">article</a>] [<a href="https://arxiv.org/abs/2105.12542">preprint</a>]<br>
+[9] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2022), Int. J. Numer. Meth. Fluids, 94/11 (2022), pp. 1784-1809 [<a href="https://doi.org/10.1002/fld.5127" target="_blank" >article</a>] [<a href="https://arxiv.org/abs/2105.12542" target="_blank" >preprint</a>]<br>
 <br>
-[8] T.L. Horvath and S. Rhebergen, An exactly mass conserving space-time embedded-hybridized discontinuous Galerkin method for the Navier-Stokes equations on moving domains, J. Comp. Phys. 417 (2020) [<a href="https://doi.org/10.1016/j.jcp.2020.109577">article</a>] [<a href="http://arxiv.org/abs/1910.08616">preprint</a>]<br>
+[8] T.L. Horvath and S. Rhebergen, An exactly mass conserving space-time embedded-hybridized discontinuous Galerkin method for the Navier-Stokes equations on moving domains, J. Comp. Phys. 417 (2020) [<a href="https://doi.org/10.1016/j.jcp.2020.109577" target="_blank" >article</a>] [<a href="http://arxiv.org/abs/1910.08616" target="_blank" >preprint</a>]<br>
 <br>
-[7] K.L.A. Kirk, T.L. Horvath, A. Cesmelioglu and S. Rhebergen, Analysis of a space-time hybridizable discontinuous Galerkin method for the advection-diffusion problem on time-dependent domains, SIAM J. Numer. Anal. 57-4 (2019), pp. 1677-1696. [<a href="https://doi.org/10.1137/18M1202049">article</a>] [<a href="http://arxiv.org/abs/1812.00216">preprint</a>]<br>
+[7] K.L.A. Kirk, T.L. Horvath, A. Cesmelioglu and S. Rhebergen, Analysis of a space-time hybridizable discontinuous Galerkin method for the advection-diffusion problem on time-dependent domains, SIAM J. Numer. Anal. 57-4 (2019), pp. 1677-1696. [<a href="https://doi.org/10.1137/18M1202049" target="_blank" >article</a>] [<a href="http://arxiv.org/abs/1812.00216" target="_blank" >preprint</a>]<br>
 <br>
-[6] T.L. Horvath and S. Rhebergen, A locally conservative and energy-stable finite element method for the Navier-Stokes problem on time-dependent domains, Int. J. Numer. Meth. Fluids, 89/12 (2019), pp 519-532. [<a href="https://doi.org/10.1002/fld.4707">article</a>] [<a href="http://arxiv.org/abs/1812.00218">preprint</a>] <br>
+[6] T.L. Horvath and S. Rhebergen, A locally conservative and energy-stable finite element method for the Navier-Stokes problem on time-dependent domains, Int. J. Numer. Meth. Fluids, 89/12 (2019), pp 519-532. [<a href="https://doi.org/10.1002/fld.4707" target="_blank" >article</a>] [<a href="http://arxiv.org/abs/1812.00218" target="_blank" >preprint</a>] <br>
 <br>
-[5] T. L. Horvath: A note on reference solution based hp-adaptive PDE solvers, Miskolc Mathematical Notes, 2014, 15(1), 109-116. [<a href="http://mat76.mat.uni-miskolc.hu/%7Emnotes/downloader.php?article=mmn_709.pdf">article</a>]<br>
+[5] T. L. Horvath: A note on reference solution based hp-adaptive PDE solvers, Miskolc Mathematical Notes, 2014, 15(1), 109-116. [<a href="http://mat76.mat.uni-miskolc.hu/%7Emnotes/downloader.php?article=mmn_709.pdf" target="_blank" >article</a>]<br>
 <br>
-[4] T. L. Horvath,  M. E. Mincsovics: Discrete maximum principles for interior penalty discontinuous Galerkin methods, Cent. Eur. J. Math., 2013, 11(4), 664-679. [<a href="http://link.springer.com/article/10.2478/s11533-012-0154-z">article</a>]<br>
+[4] T. L. Horvath,  M. E. Mincsovics: Discrete maximum principles for interior penalty discontinuous Galerkin methods, Cent. Eur. J. Math., 2013, 11(4), 664-679. [<a href="http://link.springer.com/article/10.2478/s11533-012-0154-z" target="_blank" >article</a>]<br>
 <br>
-[3] T. L. Horvath, F. Izsak: Implicit a posteriori error estimation using patch recovery techniques, Cent. Eur. J. Math., 10(1), 2012, 55-72. [<a href="http://dx.doi.org/10.2478/s11533-011-0119-7">article</a>]<br>
+[3] T. L. Horvath, F. Izsak: Implicit a posteriori error estimation using patch recovery techniques, Cent. Eur. J. Math., 10(1), 2012, 55-72. [<a href="http://dx.doi.org/10.2478/s11533-011-0119-7" target="_blank" >article</a>]<br>
 <br>
-[2] A. Csik, T. L. Horvath, P. Foldesi: An approximate Analytic Solution of the Inventory Balance Delay Differential Equation, Acta Technica Jaurinensis Series Logistica, (2010) 3 231-256. [<a href="http://journal.sze.hu/index.php/acta/article/view/80">article</a>]<br>
+[2] A. Csik, T. L. Horvath, P. Foldesi: An approximate Analytic Solution of the Inventory Balance Delay Differential Equation, Acta Technica Jaurinensis Series Logistica, (2010) 3 231-256. [<a href="http://journal.sze.hu/index.php/acta/article/view/80" target="_blank" >article</a>]<br>
 <br>
 [1] T. L. Horvath, P. L. Simon: On the exact number of solutions of a
 singular boundary value problem, Differential and Integral
 Equations, Volume
-22, Numbers 7-8, July/August p 787-796 2009. [<a href="http://projecteuclid.org/euclid.die/1356019548">article</a>]<br>
+22, Numbers 7-8, July/August p 787-796 2009. [<a href="http://projecteuclid.org/euclid.die/1356019548" target="_blank" >article</a>]<br>
 
 
 <br>
 <span style="font-weight: bold; font-size:20px;">Book chapter</span><br><br>
-[1] M. E. Mincsovics, T. L. Horvath: On the differences of the discrete weak and strong maximum principles for elliptic operators, Lecture Notes in Computer Science, Springer 7116, 2012, 614-621. [<a href="http://link.springer.com/chapter/10.1007%2F978-3-642-29843-1_70">chapter</a>]<br>
+[1] M. E. Mincsovics, T. L. Horvath: On the differences of the discrete weak and strong maximum principles for elliptic operators, Lecture Notes in Computer Science, Springer 7116, 2012, 614-621. [<a href="http://link.springer.com/chapter/10.1007%2F978-3-642-29843-1_70" target="_blank">chapter</a>]<br>
 <br>
 <br>
 
 <span style="font-weight: bold; font-size:20px;">Thesis</span><br>
 <br>
-[3] Horvath, T.: Adaptive Finite Element Methods for Elliptic Equations, PhD in Applied Mathematics, Eotvos University Budapest, 2014. [<a href="TH_PhD.pdf">pdf</a>]<br>
+[3] Horvath, T.: Adaptive Finite Element Methods for Elliptic Equations, PhD in Applied Mathematics, Eotvos University Budapest, 2014. [<a href="TH_PhD.pdf" target="_blank">pdf</a>]<br>
 <br>
 [2] Horvath, T.: Adjoint Based Goal Oriented
 Error Estimation for Adaptive Petrov-Galerkin Finite Element Methods -
-Application to Convection-Diffusion Problems, Research Master, Von Karman Institute, 2014. [<a href="TH_VKI_RM.pdf">pdf</a>]<br>
+Application to Convection-Diffusion Problems, Research Master, Von Karman Institute, 2014. [<a href="TH_VKI_RM.pdf" target="_blank">pdf</a>]<br>
 <br>
-[1] Horvath, T.: Exact Number of Solutionf of Nonlinear Boundary Value Problems, in Hungarian, MSc in Applied Mathematics, Eotvos University Budapest, 2008. [<a href="TH_MSc.pdf">pdf</a>]<br>
+[1] Horvath, T.: Exact Number of Solutionf of Nonlinear Boundary Value Problems, in Hungarian, MSc in Applied Mathematics, Eotvos University Budapest, 2008. [<a href="TH_MSc.pdf" target="_blank">pdf</a>]<br>
 <br>
 
 <span style="font-weight: bold; font-size:20px;">Student research</span><br>
 <br>
-[1] Horvath, T.: Exact Number of Solutions of a Boundary Value Problem Involving Singular Nonlinearity, in Hungarian, Eotvos University Budapest, Faculty of Science, Institute of Mathematics, 2007. 11. 30. [<a href="TDK_jav.pdf">pdf</a>]
+[1] Horvath, T.: Exact Number of Solutions of a Boundary Value Problem Involving Singular Nonlinearity, in Hungarian, Eotvos University Budapest, Faculty of Science, Institute of Mathematics, 2007. 11. 30. [<a href="TDK.pdf" target="_blank">pdf</a>]
 <br>
 
 <br>
