--- a/research.html
+++ b/research.html
@@ -41,12 +41,12 @@
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
         <h4>August, 2022</h4>
-        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796">Math Comp</a>
+        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796" target="_blank">Math Comp</a>
         <h4>June, 2022</h4>
-        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127">IJNMF</a>
+        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
       </div>
       <div id="content">
         <h1>Space-Time Hybridizable Discontinuous Galerkin on moving domains</h1>
@@ -58,7 +58,7 @@
         The introductions of these additional unknowns will result in a large linear system; however, it can be reduced to the facet unknowns by using the Schur complement. This requires 
         the inversion of the matrix involving the unknowns on the element interiors, but due to the choice of the fluxes this matrix is block diagonal, therefore easily invertible.<br><br>
         
-        Using the MFEM Library (<a href="http://mfem.org/">mfem.org</a>) I implemented these methods using the Local DG flux for the diffusion. In this case some additional postprocessing can be done,
+        Using the MFEM Library (<a href="http://mfem.org/" target="_blank">mfem.org</a>) I implemented these methods using the Local DG flux for the diffusion. In this case some additional postprocessing can be done,
         which results in superconvergence for the diffusion dominated case. The following plot shows the number of degrees of freedom for and n-by-n structured triangular mesh in 2D. Dashed line: DG, continuous line CG, diamonds: HDG, circles EDG.
         
         <span class="center"><img src="DoF.jpg" alt="DoF" width=600 heigt=200/>
