--- a/talks.html
+++ b/talks.html
@@ -37,25 +37,27 @@
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
         <h4>August, 2022</h4>
-        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796">Math Comp</a>
+        <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796" target="_blank">Math Comp</a>
         <h4>June, 2022</h4>
-        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127">IJNMF</a>
+        <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
       </div>
       <div id="content">
 
-<!--<span style="font-weight: bold;">Submitted papers:</span><br>
-<br>
-[8] KK.L.A. Kirk, T.L. Horvath, A. Cesmelioglu and S. Rhebergen, Analysis of a space-time hybridizable discontinuous Galerkin method for the advection-diffusion problem on time-dependent domains, SIAM J. Numer. Anal., Accepted, 2019. [<a href="http://arxiv.org/abs/1812.00216">preprint</a>]
-<br>-->
 
 <br>
 <span style="font-weight: bold; font-size:20px;">Upcoming talks</span>
 <br>
 <br>
-Embedded/hybridized DG: the best of both worlds, 2023 Spring AMS Central Sectional Meeting, (April 15-16, 2023)<br>
+Space-time embedded/hybridized DG for the Navier-Stokes problem, SIAM CSE, February 26 - March 3, 2023, Amsterdam, The Netherlands
+<br>
+<br>
+Embedded/hybridized DG: the best of both worlds, 2023 Spring AMS Central Sectional Meeting, April 15-16, 2023
+<br>
+<br>
+Space-Time DG with Non-Matching Spatial Meshes, 22nd IACM Computational Fluids Conference – CFC 2023, Aril 25 - 28, 2023 Cannes, France
 <br>
 <br>
 <span style="font-weight: bold; font-size:20px;">Recent talks</span>
@@ -64,7 +66,7 @@ Embedded/hybridized DG: the best of both worlds, 2023 Spring AMS Central Section
 Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Fluid-Rigid Body Interaction Problems, WCCM 2022, (virtual)
 <br>
 <br>
-Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/">FEM@LLNL Seminar Series</a>, March 29, 2022, <a href="https://mfem.org/pdf/seminar/horvath.pdf">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A">YouTube video</a>
+Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/" target="_blank">FEM@LLNL Seminar Series</a>, March 29, 2022, <a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a>
 <br>
 <br>
 Sliding grid techniques with Precomputable Meshes for Space-Time Hybridizable Discontinuous Galerkin methods, 2022 Finite Element Rodeo, March 4-5, 2022 Southern Methodist University, Dallas, Texas
