--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
 <span style="font-weight: bold; font-size:20px;">Journal papers</span>
 <br>
 <br>
-[10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, Mathematics of Computation, 92/340 (2023), pp 525–556 [<a href="https://doi.org/10.1090/mcom/3796" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2103.13492" target="_blank" >preprint</a>]<br>
+[10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, Mathematics of Computation, 92/340 (2023), pp 525-556 [<a href="https://doi.org/10.1090/mcom/3796" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2103.13492" target="_blank" >preprint</a>]<br>
 <br>
 [9] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2022), Int. J. Numer. Meth. Fluids, 94/11 (2022), pp. 1784-1809 [<a href="https://doi.org/10.1002/fld.5127" target="_blank" >article</a>] [<a href="https://arxiv.org/abs/2105.12542" target="_blank" >preprint</a>]<br>
 <br>
