--- a/talks.html
+++ b/talks.html
@@ -54,7 +54,7 @@
 Space-time embedded/hybridized DG for the Navier-Stokes problem, SIAM CSE, February 26 - March 3, 2023, Amsterdam, The Netherlands
 <br>
 <br>
-Embedded/hybridized DG: the best of both worlds, 2023 Spring AMS Central Sectional Meeting, April 15-16, 2023
+Embedded DG or Hybridizable DG? Why not both?, 2023 Spring AMS Central Sectional Meeting, April 15-16, 2023
 <br>
 <br>
 Space-Time DG with Non-Matching Spatial Meshes, 22nd IACM Computational Fluids Conference – CFC 2023, Aril 25 - 28, 2023 Cannes, France
