--- a/teaching.html
+++ b/teaching.html
@@ -52,13 +52,7 @@
 <br>-->
 
 <br>
-<span style="font-weight: bold; font-size:20px;">Current term (2022 Fall)</span>
-<br>
-<br>
-No classes (medical leave)
-<br>
-<br>
-<span style="font-weight: bold; font-size:20px;">Upcoming term (2023 Winter)</span>
+<span style="font-weight: bold; font-size:20px;">Current term (2023 Winter)</span>
 <br>
 <br>
 APM 5441: Mathematical Analysis for Engineers I<br>
