--- a/talks.html
+++ b/talks.html
@@ -57,7 +57,7 @@ Space-time embedded/hybridized DG for the Navier-Stokes problem, SIAM CSE, Febru
 Embedded DG or Hybridizable DG? Why not both?, 2023 Spring AMS Central Sectional Meeting, April 15-16, 2023
 <br>
 <br>
-Space-Time DG with Non-Matching Spatial Meshes, 22nd IACM Computational Fluids Conference – CFC 2023, Aril 25 - 28, 2023 Cannes, France
+Space-Time DG with Non-Matching Spatial Meshes, 22nd IACM Computational Fluids Conference - CFC 2023, Aril 25 - 28, 2023 Cannes, France
 <br>
 <br>
 <span style="font-weight: bold; font-size:20px;">Recent talks</span>
