--- a/talks.html
+++ b/talks.html
@@ -51,16 +51,25 @@
 <span style="font-weight: bold; font-size:20px;">Upcoming talks</span>
 <br>
 <br>
-Space-time embedded/hybridized DG for the Navier-Stokes problem, SIAM CSE, February 26 - March 3, 2023, Amsterdam, The Netherlands
+Implementation of Hybridizable Discontinuous Galerkin Methods via the HDG Branch, <a href="https://mfem.org/workshop/" target="_blank">3rd MFEM Community Workshop, Virtual Meeting</a>, October 26, 2023
 <br>
 <br>
-Embedded DG or Hybridizable DG? Why not both?, 2023 Spring AMS Central Sectional Meeting, April 15-16, 2023
+<span style="font-weight: bold; font-size:20px;">Recent talks</span>
+<br>
+<br>
+A Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Incompressible Flows, 17th USNCCM, July 23-27, 2023, Albuquerque, New Mexico 
+<br>
+<br>
+Space-time embedded/hybridized DG for the Navier-Stokes problem, 2023 ICOSAHOM, August 14-18, 2023, Seoul, South Korea
 <br>
 <br>
 Space-Time DG with Non-Matching Spatial Meshes, 22nd IACM Computational Fluids Conference - CFC 2023, Aril 25 - 28, 2023 Cannes, France
 <br>
 <br>
-<span style="font-weight: bold; font-size:20px;">Recent talks</span>
+Embedded DG or Hybridizable DG? Why not both?, 2023 Spring AMS Central Sectional Meeting, April 15-16, 2023
+<br>
+<br>
+Space-time embedded/hybridized DG for the Navier-Stokes problem, SIAM CSE, February 26 - March 3, 2023, Amsterdam, The Netherlands
 <br>
 <br>
 Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Fluid-Rigid Body Interaction Problems, WCCM 2022, (virtual)
