--- a/teaching.html
+++ b/teaching.html
@@ -52,19 +52,19 @@
 <br>-->
 
 <br>
-<span style="font-weight: bold; font-size:20px;">Current term (2023 Winter)</span>
+<span style="font-weight: bold; font-size:20px;">Current term (2023 Fall)</span>
 <br>
+<br>
+APM 2559: Introduction to Differential Equations<br>
 <br>
 APM 5441: Mathematical Analysis for Engineers I<br>
-<br>
-APM 6443: Numerical Methods for Partial Differential Equations<br>
 <br>
 <span style="font-weight: bold; font-size:20px;">Recent terms </span>
 <br>
 <br>
 MTH 1555: Calculus II (2020 Fall, 2021 Fall)<br>
 <br>
-APM 5441: Mathematical Analysis for Engineers I (2021 Winter)<br>
+APM 5441: Mathematical Analysis for Engineers I (2021 Winter, 2023 Winter)<br>
 <br>
 APM 5553: Advanced Ordinary Differential Equations (2021 Winter)<br>
 <br>
@@ -72,7 +72,7 @@ MTH 1221: Linear Programming, Elementary Functions (2021 Summmer I)<br>
 <br>
 APM 2555: Introduction to Differential Equations with Matrix Algebra (2021 Fall)<br>
 <br>
-APM 6443: Numerical Methods for Partial Differential Equations (2022 Winter)<br>
+APM 6443: Numerical Methods for Partial Differential Equations (2022 Winter, 2023 Winter)<br>
 <br>
       </div>
     </div>
