Adding the MHD paper link

--- a/publications.html
+++ b/publications.html
@@ -36,6 +36,8 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
+        <h4>October, 2023</h4>
+        <p>Our paper on 'A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations' is avaliable on <a href="https://arxiv.org/abs/2310.06687" target="_blank">arxiv</a>
         <h4>August, 2022</h4>
         <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796" target="_blank">Math Comp</a>
         <h4>June, 2022</h4>
@@ -51,6 +53,8 @@
 <br>
 <span style="font-weight: bold; font-size:20px;">Journal papers</span>
 <br>
+<br>
+[11] J-U. Chen, T.L. Horvath and T. Bui-Thanh, A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations, submitted, (2023) [<a href="https://arxiv.org/abs/2310.06687" target="_blank" >preprint</a>]<br>
 <br>
 [10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, Mathematics of Computation, 92/340 (2023), pp 525-556 [<a href="https://doi.org/10.1090/mcom/3796" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2103.13492" target="_blank" >preprint</a>]<br>
 <br>
