--- a/teaching.html
+++ b/teaching.html
@@ -36,6 +36,8 @@
       <div class="sidebar">
         <!-- insert your sidebar items here -->
         <h2>Latest News</h2>
+        <h4>October, 2023</h4>
+        <p>Our paper on 'A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations' is avaliable on <a href="https://arxiv.org/abs/2310.06687" target="_blank">arxiv</a>
         <h4>August, 2022</h4>
         <p>Our paper on 'Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations' is avaliable on <a href="https://arxiv.org/abs/2103.13492" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1090/mcom/3796" target="_blank">Math Comp</a>
         <h4>June, 2022</h4>
