--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- insert the page content here -->
         <IMG align=center src="TH.jpg" width="200"><br/> 
         <h1>Welcome to my homepage!</h1>
-        <p>I am currently an Assistant Professor at the Department of Mathematics and Statistics at Oakland University. Previously I was working with <a href="https://uwaterloo.ca/scholar/srheberg" target="_blank">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/" target="_blank">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.math.elte.hu/" target="_blank">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.</p>
+        <p>I am currently an Associate  Professor at the Department of Mathematics and Statistics at Oakland University. Previously I was working with <a href="https://uwaterloo.ca/scholar/srheberg" target="_blank">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/" target="_blank">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.math.elte.hu/" target="_blank">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.</p>
         
         <p>Office: Oakland University<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Department of Mathematics and Statistics<br>
