--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li class="selected"><a href="index.html">Home</a></li>
           <li><a href="research.html">Research</a></li>
-          <li><a href="publications.html">Publication list</a></li>
+          <li><a href="students.html">Students</a></li>
+          <li><a href="publications.html">Publications</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li><a href="talks.html">Talks</a></li>
@@ -34,7 +35,7 @@
     <div id="site_content">
       <div class="sidebar">
         <!-- insert your sidebar items here -->
-        <h2>Latest News</h2>
+<!--        <h2>Latest News</h2>
         <h4>October, 2023</h4>
         <p>Our paper on 'A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations' is avaliable on <a href="https://arxiv.org/abs/2310.06687" target="_blank">arxiv</a>
         <h4>August, 2022</h4>
@@ -43,13 +44,15 @@
         <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>-->
       </div>
       <div id="content">
         <!-- insert the page content here -->
         <IMG align=center src="TH.jpg" width="200"><br/> 
         <h1>Welcome to my homepage!</h1>
-        <p>I am currently an Associate  Professor at the Department of Mathematics and Statistics at Oakland University. Previously I was working with <a href="https://uwaterloo.ca/scholar/srheberg" target="_blank">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/" target="_blank">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.math.elte.hu/" target="_blank">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.</p>
+        <p>I am currently an Associate  Professor at the Department of Mathematics and Statistics at Oakland University. Currely, I serve as the Academic Co-President of the <a href="https://sites.google.com/view/glsiam" target="_blank">Great Lakes Section of SIAM</a>. <!--Previously I was working with <a href="https://uwaterloo.ca/scholar/srheberg" target="_blank">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/" target="_blank">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.math.elte.hu/" target="_blank">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.--></p>
+
+        <p>We are hosting the <a href="https://sites.google.com/oakland.edu/fec2025-spring-at-ou/" target="_blank">2025 Spring Finite Element Circus</a> at OU!</p>
         
         <p>Office: Oakland University<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Department of Mathematics and Statistics<br>
