--- a/research.html
+++ b/research.html
@@ -27,7 +27,8 @@
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
           <li class="selected"><a href="research.html">Research</a></li>
-          <li><a href="publications.html">Publication list</a></li>
+          <li><a href="students.html">Students</a></li>
+          <li><a href="publications.html">Publications</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li><a href="talks.html">Talks</a></li>
@@ -39,7 +40,7 @@
     <div id="site_content">
       <div class="sidebar">
         <!-- insert your sidebar items here -->
-        <h2>Latest News</h2>
+<!--        <h2>Latest News</h2>
         <h4>October, 2023</h4>
         <p>Our paper on 'A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations' is avaliable on <a href="https://arxiv.org/abs/2310.06687" target="_blank">arxiv</a>
         <h4>August, 2022</h4>
@@ -48,7 +49,7 @@
         <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>-->
       </div>
       <div id="content">
         <h1>Space-Time Hybridizable Discontinuous Galerkin on moving domains</h1>
