--- a/teaching.html
+++ b/teaching.html
@@ -24,7 +24,8 @@
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li><a href="index.html">Home</a></li>
           <li><a href="research.html">Research</a></li>
-          <li><a href="publications.html">Publication list</a></li>
+          <li><a href="students.html">Students</a></li>
+          <li><a href="publications.html">Publications</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li class="selected"><a href="teaching.html">Teaching</a></li>
           <li><a href="talks.html">Talks</a></li>
@@ -35,7 +36,7 @@
     <div id="site_content">
       <div class="sidebar">
         <!-- insert your sidebar items here -->
-        <h2>Latest News</h2>
+<!--        <h2>Latest News</h2>
         <h4>October, 2023</h4>
         <p>Our paper on 'A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations' is avaliable on <a href="https://arxiv.org/abs/2310.06687" target="_blank">arxiv</a>
         <h4>August, 2022</h4>
@@ -44,7 +45,7 @@
         <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>-->
       </div>
       <div id="content">
 
@@ -54,25 +55,25 @@
 <br>-->
 
 <br>
-<span style="font-weight: bold; font-size:20px;">Current term (2023 Fall)</span>
+<span style="font-weight: bold; font-size:20px;">Current term (2025 Winter)</span>
 <br>
 <br>
-APM 2559: Introduction to Differential Equations<br>
-<br>
-APM 5441: Mathematical Analysis for Engineers I<br>
+APM 6443: Numerical Methods for Partial Differential Equations<br>
 <br>
 <span style="font-weight: bold; font-size:20px;">Recent terms </span>
 <br>
 <br>
-MTH 1555: Calculus II (2020 Fall, 2021 Fall)<br>
+MTH 1555: Calculus II (2024 Summer)<br>
 <br>
-APM 5441: Mathematical Analysis for Engineers I (2021 Winter, 2023 Winter)<br>
+APM 2559: Introduction to Differential Equations (2023 Fall, 2024 Fall)<br>
 <br>
-APM 5553: Advanced Ordinary Differential Equations (2021 Winter)<br>
+APM 5441: Mathematical Analysis for Engineers I (2024 Winter)<br>
 <br>
-MTH 1221: Linear Programming, Elementary Functions (2021 Summmer I)<br>
+APM 5442: Mathematical Analysis for Engineers II (2024 Winter)<br>
 <br>
-APM 2555: Introduction to Differential Equations with Matrix Algebra (2021 Fall)<br>
+APM 5557: Advanced Partial Differential Equations (2024 Fall)<br>
+<br>
+APM 2555: Introduction to Differential Equations with Matrix Algebra (2024 Winter)<br>
 <br>
 APM 6443: Numerical Methods for Partial Differential Equations (2022 Winter, 2023 Winter)<br>
 <br>
