--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,8 @@
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li><a href="index.html">Home</a></li>
           <li><a href="research.html">Research</a></li>
-          <li class="selected"><a href="publications.html">Publication list</a></li>
+          <li><a href="students.html">Students</a></li>
+          <li class="selected"><a href="publications.html">Publications</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li><a href="talks.html">Talks</a></li>
@@ -35,7 +36,7 @@
     <div id="site_content">
       <div class="sidebar">
         <!-- insert your sidebar items here -->
-        <h2>Latest News</h2>
+<!--        <h2>Latest News</h2>
         <h4>October, 2023</h4>
         <p>Our paper on 'A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations' is avaliable on <a href="https://arxiv.org/abs/2310.06687" target="_blank">arxiv</a>
         <h4>August, 2022</h4>
@@ -44,7 +45,7 @@
         <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>-->
       </div>
       <div id="content">
 
@@ -54,7 +55,7 @@
 <span style="font-weight: bold; font-size:20px;">Journal papers</span>
 <br>
 <br>
-[11] J-U. Chen, T.L. Horvath and T. Bui-Thanh, A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations, submitted, (2023) [<a href="https://arxiv.org/abs/2310.06687" target="_blank" >preprint</a>]<br>
+[11] J-U. Chen, T.L. Horvath and T. Bui-Thanh, A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations, submitted, (2023) [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782524006704" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2310.06687" target="_blank" >preprint</a>]<br>
 <br>
 [10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, Mathematics of Computation, 92/340 (2023), pp 525-556 [<a href="https://doi.org/10.1090/mcom/3796" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2103.13492" target="_blank" >preprint</a>]<br>
 <br>
