--- a/talks.html
+++ b/talks.html
@@ -24,7 +24,8 @@
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li><a href="index.html">Home</a></li>
           <li><a href="research.html">Research</a></li>
-          <li><a href="publications.html">Publication list</a></li>
+          <li><a href="students.html">Students</a></li>
+          <li><a href="publications.html">Publications</a></li>
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li class="selected"><a href="talks.html">Talks</a></li>
@@ -35,7 +36,7 @@
     <div id="site_content">
       <div class="sidebar">
         <!-- insert your sidebar items here -->
-        <h2>Latest News</h2>
+<!--        <h2>Latest News</h2>
         <h4>October, 2023</h4>
         <p>Our paper on 'A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations' is avaliable on <a href="https://arxiv.org/abs/2310.06687" target="_blank">arxiv</a>
         <h4>August, 2022</h4>
@@ -44,19 +45,37 @@
         <p>Our paper on 'A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction' is avaliable on <a href="https://arxiv.org/abs/2105.12542" target="_blank">arxiv</a> and has been accepted to <a href="https://doi.org/10.1002/fld.5127" target="_blank">IJNMF</a>
         <h4>March, 2022</h4>
         <p>Space-Time Hybridizable Discontinuous Galerkin with MFEM, FEM@LLNL seminar talk, March 29 2022
-        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>
+        <p><a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a></p>-->
       </div>
       <div id="content">
 
 
 <br>
-<span style="font-weight: bold; font-size:20px;">Upcoming talks</span>
+<span style="font-weight: bold; font-size:20px;">Upcoming talks and conference participations</span>
 <br>
 <br>
-Implementation of Hybridizable Discontinuous Galerkin Methods via the HDG Branch, <a href="https://mfem.org/workshop/" target="_blank">3rd MFEM Community Workshop, Virtual Meeting</a>, October 26, 2023
+FE Circus, Spring 2025, April 25-26, 2025, Oakland University
+<br>
+<br>
+European Finite Element Fair EFEF 2025, May 23-24, 2025, Trieste, Italy
+<br>
+<br>
+Embedded-Hybridized Discontinuous Galerkin for Magnetohydrodynamics, COUPLED Conference 2025, May 25-28, 2025, Villasimius, Italy
+<br>
+<br>
+Embedded-Hybridized Discontinuous Galerkin for Magnetohydrodynamics, ICOSAHOM 2025, July 13-18, 2025, Montreal, Canada
 <br>
 <br>
 <span style="font-weight: bold; font-size:20px;">Recent talks</span>
+<br>
+<br>
+Adaptive Space-Time Mesh Generation, FE Circus, Spring 2024, April 19-20, 2024, Brown University
+<br>
+<br>
+Adaptive Space-Time Mesh Generation, FE Circus, FE Rodeo 2024, March 8-9, 2024, Rice University
+<br>
+<br>
+Implementation of Hybridizable Discontinuous Galerkin Methods via the HDG Branch, <a href="https://mfem.org/workshop/" target="_blank">3rd MFEM Community Workshop, Virtual Meeting</a>, October 26, 2023
 <br>
 <br>
 A Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Incompressible Flows, 17th USNCCM, July 23-27, 2023, Albuquerque, New Mexico 
