Fixin typo w David's final year

--- a/students.html
+++ b/students.html
@@ -51,7 +51,7 @@
 <span style="font-weight: bold; font-size:20px;">Current students</span>
 <br>
 <br>
-<b>David Hennicken</b> (2024-2048) (PhD in Applied Mathematics)
+<b>David Hennicken</b> (2024-) (PhD in Applied Mathematics)
 <br>
 <br>
 <p>David works on Embedded/Hybridized discontinuous Galerkin discretizations for higher-order problems.
